[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "supergrok"
version = "1.0.0"
description = "Ultimate optimizer for generalization - combines NeuralGrok, Grokfast, and GrokAdamW"
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.8"
authors = [
    {name = "SuperGrok Development"}
]
keywords = [
    "deep-learning",
    "optimizer",
    "pytorch",
    "grokking",
    "generalization",
    "machine-learning",
    "neural-networks"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "torch>=1.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]

[project.urls]
Homepage = "https://github.com/peterc04/supergrok"
Repository = "https://github.com/peterc04/supergrok"
Issues = "https://github.com/peterc04/supergrok/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["supergrok*"]
